--- a/Proyecto 4/css/style.css
+++ b/Proyecto 4/css/style.css
@@ -439,3 +439,26 @@ ul ol {
 #down:Active {
     margin: 3px 5px 4px;
 }
+
+.text {
+    width:100%;
+    height: 100%;
+    resize: none;
+}
+
+.threeLetters {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: top;
+    justify-items: top;
+}
+
+.threeLetters.twoDown > b {
+    grid-column: 1/3;
+    justify-self: center;
+}
+
+.threeLetters.twoUp > span {
+    grid-column: 1/3;
+    justify-self: center;
+}
