--- a/Proyecto 3/css/style.css
+++ b/Proyecto 3/css/style.css
@@ -1,92 +1,55 @@
-* {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
+body {
+    background-color: lightslategrey;
 }
 
-#app {
-    width: 80%;
-    margin: 2% auto;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-}
-
-img {
-    height: 100%;
-    width: 100%;
-    user-drag: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}
-
-#app>div {
-    border: 1px solid black;
-}
-
-button {
-    box-shadow: 0px 10px 14px -7px #3e7327;
-    background: linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
-    background-color: #77b55a;
-    border-radius: 4px;
-    border: 1px solid #4b8f29;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 13px;
-    font-weight: bold;
-    padding: 6px 12px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #5b8a3c;
-    margin: 10px;
-}
-
-button:hover {
-    background: linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
-    background-color: #72b352;
-}
-
-button:active {
-    position: relative;
-    top: 1px;
-}
-
-#menu {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-}
-
-#menu>#buttons {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-}
-
-#menu>#buttons {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-}
-
-#stats {
+#seats, #films{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 10px;
+    justify-items: center;
+    align-items: center;
+    font-size: 3em;
 }
 
-#ranking {
-    margin: 10px;
-}
-
-#ranking>table {
-    margin-top: 30px;
-}
-
-td {
+#films {
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 20px;
     text-align: center;
+    font-size: 2em;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #191919; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
+
+#seats img {
+    -webkit-filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
+    filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
+}
+
+a > img {
+    width: 70%;
+}
+
+#seats > img {
+    width: 50%;
+}
+
+#seats > .booked {
+    -webkit-filter: invert(40%) grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(400%) contrast(2);
+    filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
+}
+
+#info {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#info > img {
+    width: 9vw;
 }
