--- a/Proyecto 10/css/style.css
+++ b/Proyecto 10/css/style.css
@@ -18,6 +18,12 @@ footer .btn {
     }
 }
 
+.logo {
+    width: 50px;
+
+    display: inline-block;
+}
+
 /* carousel */
 
 .carousel {
@@ -65,12 +71,21 @@ footer .btn {
     font-size: 2em;
 }
 
+/* cart */
 
 .cart-container .cart-body {
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     padding: 20px 0 20px;
     margin: 20px 0 30px;
+}
+
+.cart-list {
+    text-align: center;
+}
+
+.cart-list td:nth-child(2) {
+    text-align: left;
 }
 
 /* login */
@@ -446,3 +461,39 @@ h3.h3 {
     border-top: 0px solid #dee2e6 !important;
     color: #728299 !important;
 }
+
+/* Product */
+
+.images {
+    position: relative;
+}
+
+.product-image {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% auto;
+    height: 500px;
+}
+
+.out-of-stock {
+    background-image: url(http://www.mtcracingmxparts.co.nz/uploads/6/9/4/4/69442973/s369866088490753860_p318_i1_w640.png) !important;
+    display: none;
+    z-index: 800;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.product-card td:nth-child(2) {
+    text-align: center;
+    font-size: 24px;
+    color: #16a085;
+    font-weight: 700;
+}
+
+.price {
+    display: inline-block;
+    margin-left: 10px;
+}
+
